turtleart.polygon7.Polygon7.scala.error
Erreur de compilation :
Polygon7:4: error: too many arguments for method droite: (x$1: Double)Unit
    droite(52,5)
          ^